# SSVStart

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.0000000  CMakeLists.txt.user.5e4d6ab  README.md  SSVStart.h  SSVStart.mk  SSVStart.project  SSVStart.txt  Utils.h  init-repository.sh
Assets/: AssetFolder.cpp  AssetFolder.h  AssetManager.cpp  AssetManager.h  Assets.cpp  Assets.h
Camera/: Camera.cpp  Camera.h
FileSystem/: FileSystem.cpp  FileSystem.h
GameSystem/: GWProperties.cpp  Game.cpp  Game.h  GameState.cpp  GameState.h  GameWindow.cpp  GameWindow.h  Timers.h
Input/: Combo.cpp  Combo.h  InputCombination.cpp  InputCombination.h  InputCombo.cpp  InputCombo.h  InputManager.cpp  InputManager.h  Manager.cpp  Manager.h  Trigger.cpp  Trigger.h
Log/: Log.cpp  Log.h
Tileset/: Tileset.cpp  Tileset.h
Timeline/: Command.cpp  Command.h  Do.cpp  Do.h  Go.cpp  Go.h  Goto.cpp  Goto.h  Timeline.cpp  Timeline.h  TimelineManager.cpp  TimelineManager.h  TimelineUtils.h  Wait.cpp  Wait.h
Utils/: Delegate.h  MemoryManager.h  ThreadWrapper.h  TimelineManager.cpp  TimelineManager.h  Utils.cpp  Utils.h  UtilsJson.cpp  UtilsJson.h
Utils/Traits/: Traits.h
cmake/Modules/: FindSSVStart.cmake
cmake/modules/: FindSSVStart.cmake
include/SSVStart/: SSVStart.h  SSVStart.hpp
include/SSVStart/Animation/: Animation.h  Animation.hpp
include/SSVStart/Assets/: AssetFolder.h  AssetFolder.hpp  AssetManager.h  AssetManager.hpp  Assets.hpp
include/SSVStart/Assets/Internal/: Common.h  DefaultAssets.hpp  Embedded.hpp  Helper.h  Helper.hpp  Loader.h  Loader.hpp  Policies.hpp  ResourceHolder.h  ResourceHolder.hpp
include/SSVStart/BitmapFont/: BitmapFont.h  BitmapFont.hpp  BitmapFontData.h  BitmapText.h  BitmapText.hpp
include/SSVStart/BitmapText/: BitmapFont.hpp  BitmapText.hpp
include/SSVStart/BitmapText/BTR/: BTR.hpp
include/SSVStart/BitmapText/BTR/Impl/: BTR.hpp  BTRChunk.hpp  BTRChunk.inl  BTRDrawState.hpp  BTREColor.hpp  BTREWave.hpp  BTREffect.hpp  BTRRoot.hpp  EffectHelper.hpp  Fwd.hpp  Ptr.hpp
include/SSVStart/BitmapText/Impl/: BitmapFont.hpp  BitmapText.hpp  BitmapTextBase.hpp  BitmapTextData.hpp  BitmapTextDrawState.hpp  BitmapTextRich.hpp  BitmapTextRich.inl  Parts.hpp  Parts.inl
include/SSVStart/Camera/: Camera.h  Camera.hpp
include/SSVStart/GameSystem/: GameEngine.hpp  GameState.h  GameState.hpp  GameSystem.hpp  GameTimer.hpp  GameWindow.h  GameWindow.hpp  Timers.h
include/SSVStart/GameSystem/Timers/: TimerBase.h  TimerBase.hpp  TimerBase.inl  TimerDynamic.h  TimerDynamic.hpp  TimerStatic.h  TimerStatic.hpp
include/SSVStart/Global/: Typedefs.h  Typedefs.hpp
include/SSVStart/Input/: Bind.h  Bind.hpp  Bind.inl  Combo.h  Combo.hpp  Combo.inl  Enums.h  Enums.hpp  Input.hpp  InputState.hpp  Manager.h  Manager.hpp  Trigger.h  Trigger.hpp
include/SSVStart/Json/: Json.hpp  UtilsJson.h  UtilsJson.hpp  UtilsJsonNew.hpp
include/SSVStart/MusicPlayer/: MusicPlayer.h  MusicPlayer.hpp
include/SSVStart/SoundPlayer/: SoundInstance.h  SoundPlayer.h  SoundPlayer.hpp
include/SSVStart/Tests/: Tests.hpp
include/SSVStart/Ticker/: Ticker.h  Ticker.hpp
include/SSVStart/Tileset/: Tileset.h  Tileset.hpp
include/SSVStart/Utils/: Input.hpp  Packet.hpp  SFML.hpp  Stringifier.hpp  ThreadWrapper.h  Utils.h  Utils.hpp  UtilsInput.h  UtilsInput.hpp  UtilsSFML.hpp  UtilsStringifier.hpp  UtilsVector2.hpp  Vector2.hpp
include/SSVStart/VertexVector/: VertexVector.h  VertexVector.hpp
src/SSVStart/Animation/: Animation.cpp
src/SSVStart/Assets/: AssetFolder.cpp  AssetManager.cpp
src/SSVStart/BitmapFont/: BitmapFont.cpp  BitmapText.cpp
src/SSVStart/Camera/: Camera.cpp
src/SSVStart/GameSystem/: GWProperties.cpp  GameState.cpp  GameWindow.cpp  Timers.cpp
src/SSVStart/GameSystem/Timers/: TimerBase.cpp  TimerDynamic.cpp  TimerStatic.cpp
src/SSVStart/Input/: Bind.cpp  Combo.cpp  Manager.cpp  Trigger.cpp
src/SSVStart/Json/: UtilsJson.cpp
src/SSVStart/MusicPlayer/: MusicPlayer.cpp
src/SSVStart/SoundPlayer/: SoundInstance.cpp  SoundPlayer.cpp
src/SSVStart/Tileset/: Tileset.cpp
src/SSVStart/Utils/: Utils.cpp  UtilsInput.cpp
test/: CMakeLists.txt  Json.cpp  UtilsInput.cpp
test/basic/: should_pass.cpp
